@@ -1,4 +1,4 @@
-#	$NetBSD: CHANGES-1.5.4,v 1.1.2.72 2002/10/18 13:41:34 itojun Exp $
+#	$NetBSD: CHANGES-1.5.4,v 1.1.2.73 2002/10/18 14:14:21 itojun Exp $
 
 A complete list of changes from NetBSD 1.5.3 to NetBSD 1.5.4:
 
@@ -1754,3 +1754,7 @@ share/zoneinfo/zone.tab				1.1.1.14-1.1.1.18
 bin/ksh/main.c					1.8
 
   Prevent ksh from dying if a user enters the (nonexistent) 'newgrp' command.
+
+games/trek/getpar.c				1.10
+  
+  Avoid buffer overrun.
